Improved the Ui of activity_profile.xml and added todo list and logout feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,111 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D9EA59"
     tools:context=".MainActivity">
+
     <LinearLayout
-        android:layout_margin="32dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="32dp"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="30sp"
+            android:text="Department Of Computer Science And Engineering\n"
             android:textAlignment="center"
-            android:text="Department Of Computer Science And Engineering\n"/>
+            android:textColor="#000"
+            android:textSize="30sp" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon"
+            android:layout_gravity="center_horizontal"
             android:scaleType="fitXY"
-            android:layout_gravity="center_horizontal"/>
+            android:src="@drawable/icon" />
 
 
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your name"
             android:layout_marginTop="50dp"
-            android:inputType="textAutoComplete"/>
+            android:hint="Enter your name"
+            android:inputType="textAutoComplete" />
+
         <EditText
             android:id="@+id/regd1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:digits="0123456789"
             android:hint="Enter your Registration No."
-            android:layout_marginTop="30dp"
-            android:maxLength="10"
-            android:digits="0123456789"
-            android:inputType="textAutoComplete"/>
+            android:inputType="textAutoComplete"
+            android:maxLength="10" />
+
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/no"
-            android:digits="0123456789"
-            android:maxLength="10"
-            android:layout_height="wrap_content"
-            android:hint="Enter your mobile number"
-            android:layout_marginTop="30dp"
-            android:inputType="textAutoComplete"/>
-        <EditText
             android:layout_width="match_parent"
-            android:id="@+id/email"
             android:layout_height="wrap_content"
-            android:hint="Enter your email"
             android:layout_marginTop="30dp"
-            android:inputType="textEmailAddress"
-            />
+            android:digits="0123456789"
+            android:hint="Enter your mobile number"
+            android:inputType="textAutoComplete"
+            android:maxLength="10" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="Enter your email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password (8 characters)"
             android:layout_marginTop="30dp"
-            android:inputType="textPassword"/>
+            android:hint="Password (8 characters)"
+            android:inputType="textPassword" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:id="@+id/login"
-            android:layout_height="wrap_content"
-            android:text="Sign in"
-            android:textSize="20sp"
-            android:textAllCaps="false"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
+
+            <Button
+                android:id="@+id/login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Sign in"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
 
 
-        <Button
-            android:id="@+id/signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sign Up"
-            android:textSize="20sp"
-            android:textAllCaps="false"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            <Button
+                android:id="@+id/signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Sign Up"
+                android:textAllCaps="false"
+                android:textSize="20sp" />
         </LinearLayout>
+
         <Button
+            android:id="@+id/contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/contact"
-            android:text="Forgot password ?\nContact Us\n"
             android:layout_gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:text="Forgot password ?\nContact Us\n"
+            android:textSize="20sp" />
 
     </LinearLayout>
-
-
 
 
 </ScrollView>
