some conflict changed

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
    
-    <item name="fac" type="id">fac</item>
-    <item name="sb" type="id">sb</item>
-    <item name="ho" type="id">ho</item>
+    <item name="fac" type="id"></item>
+    <item name="sb" type="id"></item>
+    <item name="ho" type="id"></item>
 </resources>
